--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "next": "16.1.6",
+    "pg": "^8.18.0",
+    "prop-types": "^15.8.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-responsive-masonry": "^2.7.1",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
