--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
+    "exifr": "^7.1.3",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "next": "16.1.6",
