--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@use-gesture/react": "^10.3.1",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
     "exifr": "^7.1.3",
+    "framer-motion": "^12.34.3",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "next": "16.1.6",
